experimental/parser/testdata/lexer/idents/non-ascii.proto.stderr.txt
error: unrecognized token
  --> testdata/lexer/idents/non-ascii.proto:1:7
   |
 1 | kitty_ğŸˆ<U+200D>â¬›
   |       ^^^^^^^^^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/lexer/idents/non-ascii.proto:2:1
   |
 2 | é»‘çŒ«
   | ^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/lexer/idents/non-ascii.proto:3:1
   |
 3 | à¤•à¤¾à¤²à¥€ à¤¬à¤¿à¤²à¥à¤²à¥€
   | ^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/lexer/idents/non-ascii.proto:3:6
   |
 3 | à¤•à¤¾à¤²à¥€ à¤¬à¤¿à¤²à¥à¤²à¥€
   |      ^^^^^

error: non-ASCII identifiers are not allowed
  --> testdata/lexer/idents/non-ascii.proto:4:1
   |
 4 | é»‘çŒ«_suffix
   | ^^^^^^^^^^^

encountered 5 errors